--- a/src/style/base.css
+++ b/src/style/base.css
@@ -3,4 +3,8 @@
     padding: 0;
     text-decoration: none;
     list-style: none;
+    box-sizing: border-box;
+}
+html,body,#app{
+    height: 100%;
 }
